# document_generator

./: README.md
backend/: .gitignore  pyproject.toml
backend/src/ai_doc/: ai_doc.py  app.py
frontend/: index.html  package.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/Home/: Home.jsx
frontend/src/components/Modal/: Modal.jsx
frontend/src/components/Sidebar/: Sidebar.jsx  data.jsx
frontend/src/context/: AppContext.jsx
frontend/src/hooks/: useGlobalContext.jsx
frontend/src/pages/: AddDoc.jsx  Document.jsx  Home.jsx  Login.jsx  NotFound.jsx  UpdateDoc.jsx  UserRegister.jsx
frontend/src/provider/: AppProvider.jsx
